--- a/testing_app.ipynb
+++ b/testing_app.ipynb
@@ -13,9 +13,7 @@
     "import dash_bootstrap_components as dbc\n",
     "from apps import heatmap_tab\n",
     "# hits_goals_tab \n",
-    "# table_playoff\n",
-    "from app import app\n",
-    "from app import server"
+    "# table_playoff\n"
    ]
   },
   {
@@ -33,7 +31,8 @@
     }
    ],
    "source": [
-    "app.layout = heatmap_tab.layout\n",
+    "app = JupyterDash(__name__, external_stylesheets=[dbc.themes.CYBORG])\n",
+    "app.layout = \n",
     "\n",
     "if __name__ == '__main__':\n",
     "    app.run_server()"
