--- a/violin_test.ipynb
+++ b/violin_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "35ae5234-aa3d-44af-99a9-df327e796252",
    "metadata": {},
    "outputs": [
@@ -11,16 +11,6 @@
      "output_type": "stream",
      "text": [
       "Dash app running on http://127.0.0.1:8050/\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\jupyter_dash\\jupyter_app.py:139: UserWarning:\n",
-      "\n",
-      "The 'environ['werkzeug.server.shutdown']' function is deprecated and will be removed in Werkzeug 2.1.\n",
-      "\n"
      ]
     }
    ],
@@ -60,12 +50,8 @@
     "def update_graph(violin_CL):\n",
     "    dff = NHL_violin\n",
     "    fig = go.Figure()\n",
-    "    fig.add_trace(go.Violin(y=dff[violin_CL].loc[dff['playoffGame'] == 0],box_visible=True, line_color='pink',\n",
-    "                               meanline_visible=True, fillcolor='darkred', opacity=0.5,\n",
-    "                    x0='Regular'))\n",
-    "    fig.add_trace(go.Violin(y=dff[violin_CL].loc[dff['playoffGame'] == 1], box_visible=True, line_color='pink',\n",
-    "                               meanline_visible=True, fillcolor='darkred', opacity=0.5,\n",
-    "                    x0='Playoffs'))\n",
+    "    fig.add_trace(go.Violin(y=dff[violin_CL].loc[dff['playoffGame'] == 0],box_visible=True, line_color='pink', meanline_visible=True, fillcolor='darkred', opacity=0.5,x0='Regular'))\n",
+    "    fig.add_trace(go.Violin(y=dff[violin_CL].loc[dff['playoffGame'] == 1], box_visible=True, line_color='pink',meanline_visible=True, fillcolor='darkred', opacity=0.5, x0='Playoffs'))\n",
     "    fig.update_layout(yaxis=dict(title=violin_CL,nticks = 12),xaxis=dict(title='Season'),title= violin_CL + ' Reg vs Playoffs',title_x=0.5,width=800,height=400,showlegend=False)\n",
     "    return fig\n",
     "\n",
