--- a/testing_app.ipynb
+++ b/testing_app.ipynb
@@ -5,29 +5,13 @@
    "execution_count": 1,
    "id": "4c7193b1-a06c-4a4c-8d63-65b3b735ffad",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\jesse\\Python\\Kaggle\\NHL\\apps\\table_playoff.py:4: UserWarning: \n",
-      "The dash_table package is deprecated. Please replace\n",
-      "`import dash_table` with `from dash import dash_table`\n",
-      "\n",
-      "Also, if you're using any of the table format helpers (e.g. Group), replace \n",
-      "`from dash_table.Format import Group` with \n",
-      "`from dash.dash_table.Format import Group`\n",
-      "  from dash_table import DataTable, FormatTemplate\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from dash import dcc\n",
     "from dash import html\n",
     "from dash.dependencies import Input, Output\n",
     "import dash_bootstrap_components as dbc\n",
-    "from apps import table_playoff\n",
-    "# hits_goals_tab \n",
+    "from apps import hits_goals_tab \n",
     "# table_playoff\n",
     "from jupyter_dash import JupyterDash\n"
    ]
@@ -48,7 +32,7 @@
    ],
    "source": [
     "app2 = JupyterDash(__name__, external_stylesheets=[dbc.themes.CYBORG])\n",
-    "app2.layout = table_playoff.layout\n",
+    "app2.layout = hits_goals_tab.layout\n",
     "\n",
     "if __name__ == '__main__':\n",
     "    app2.run_server()"
